# Self_Reflective_RAG

./: .gitignore  README.md  app.py  apps.py  logs.py  main.py  pyproject.toml  tree.py  tree.txt
app/: config.py  main.py
app/api/: chat_router.py  doc_router.py  health_router.py  index_router.py
app/data/: context.txt
app/embeddings/: vector_store.py
app/graph/: nodes.py  prompts.py  rag.py  routers.py
app/llm/: llm_model.py
app/models/: schema.py  state.py
apps/: config.py  main.py
apps/embeddings/: vector_store.py
apps/graph/: nodes.py  prompts.py  rag.py  routers.py
apps/model/: llm_model.py
apps/schema/: schema.py
frontend/: index.html  script.js  style.css
