[project]
name = "self-reflective-rag"
version = "0.1.0"
description = "Self Reflective Rag System"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faiss-cpu>=1.13.2",
    "fastapi>=0.135.1",
    "langchain>=1.2.12",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.1",
    "langgraph>=1.1.2",
    "pypdf>=6.9.0",
    "uvicorn>=0.42.0",
]
